--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-PORT=5000
+# Variables de conexión a la base de datos
 DB_HOST=b5e9trvwvq1qqfbldi14-mysql.services.clever-cloud.com
 DB_USER=ueyu3pwilbg3e6ra
 DB_PASSWORD=H2lT4SWBv2yhYBlQ9Shl
 DB_NAME=b5e9trvwvq1qqfbldi14
 DB_PORT=3306
-JWT_SECRET=supersecreto
+
+# Puerto del servidor Express
+PORT=3000
