--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ DB_PORT=3306
 
 # Puerto del servidor Express
 PORT=3000
+GOOGLE_CLIENT_ID=639044841839-ddle5ha663v3qd44d8rphotrnkjj59n9.apps.googleusercontent.com
